feat(auto clear): adding ability to clear all cells in row / column once the section has all required cells selected

--- a/src/app/component/cell/cell.component.html
+++ b/src/app/component/cell/cell.component.html
@@ -51,6 +51,7 @@
 } @else if (displayType === "header") {
   <div
     appGesture
+    (doubleTap)="headerDoubleTapped.emit()"
     (longPress)="isMagnified = true"
     (allGesturesComplete)="gestureComplete()"
   >
