--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -136,6 +136,7 @@
                       [columnCount]="columnCount"
                       [shapesMode]="shapesMode"
                       [disableAnimation]="disableAnimations"
+                      (headerDoubleTapped)="onHeaderDoubleTap(rowIndex, colIndex)"
                     ></app-cell>
                   } @else {
                     <app-cell
