feat(current sum): making row / col current sums toggleable

--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -136,7 +136,10 @@
                       [columnCount]="columnCount"
                       [shapesMode]="shapesMode"
                       [disableAnimation]="disableAnimations"
-                      (headerDoubleTapped)="onHeaderDoubleTap(rowIndex, colIndex)"
+                      [rowColCurrentSumVisible]="rowColCurrentSumVisible"
+                      (headerDoubleTapped)="
+                        onHeaderDoubleTap(rowIndex, colIndex)
+                      "
                     ></app-cell>
                   } @else {
                     <app-cell
