feat(selected sum): showing selected sum of color groups

--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -148,6 +148,9 @@
                       [columnCount]="columnCount"
                       [shapesMode]="shapesMode"
                       [disableAnimation]="disableAnimations"
+                      [colorGroupCurrentSelectionSumVisible]="
+                        colorGroupCurrentSumVisible
+                      "
                       (used)="use($event)"
                       (cleared)="clear($event)"
                     ></app-cell>
