--- a/src/app/component/cell/cell.component.scss
+++ b/src/app/component/cell/cell.component.scss
@@ -171,6 +171,11 @@
   text-align: center;
 }
 
+.super-label {
+  font-size: 0.5em;
+  vertical-align: 0.8em;
+}
+
 .corner-number.left {
   left: 0cqmin;
 }
