--- a/src/app/component/settings/settings.html
+++ b/src/app/component/settings/settings.html
@@ -33,8 +33,8 @@
       Show Color Group Current Sum
     </mat-slide-toggle>
     <p>
-      Controls whether standard cells display in the upper-right corner the
-      current sum of selected cells.
+      Controls whether the sum of selected cells in a color group displays in
+      the color groups first cell's upper-right corner.
     </p>
 
     <mat-slide-toggle
