doc(): word smithing etc

--- a/src/app/component/documentation/documentation.html
+++ b/src/app/component/documentation/documentation.html
@@ -151,9 +151,9 @@
     <li>
       <strong>Spot running totals:</strong> The upper-right corner of each
       header cell can show the sum of the currently selected cells in that
-      section. Toggle this display from the
-      <a routerLink="/settings">Settings</a> menu if you prefer a mental
-      challenge.
+      section. You can disable this display from the
+      <a routerLink="/settings">Settings</a> menu if you like to make things
+      more difficult than they need to be.
     </li>
     <li>
       <strong>Auto-clear satisfied lines:</strong> Once you've selected every
@@ -174,7 +174,7 @@
       back to 10 when you want to start fresh.
     </li>
     <li>
-      <strong>Stat toggles:</strong> some of the stats are surrounded by
+      <strong>Stat toggles:</strong> Some of the stats are surrounded by
       <code>&lt;</code> <code>&gt;</code> indicating they can be clicked to
       display different stats.
     </li>
@@ -185,6 +185,7 @@
       compares.
     </li>
     <li>
+      <a id="fp-warning"></a>
       <span>
         <code
           ><mat-icon class="icon warning-icon">report_problem</mat-icon>FP+
