--- a/src/app/component/settings/settings.scss
+++ b/src/app/component/settings/settings.scss
@@ -16,6 +16,12 @@ section {
   margin-bottom: 20px;
 }
 
+.settings-option-group {
+  display: grid;
+  gap: 20px;
+  margin-top: 24px;
+}
+
 mat-form-field {
   width: 100%;
   max-width: 400px;
