doc word smithing

--- a/src/app/component/documentation/documentation.html
+++ b/src/app/component/documentation/documentation.html
@@ -152,8 +152,8 @@
       <strong>Spot running totals:</strong> The upper-right corner of each
       header cell can show the sum of the currently selected cells in that
       section. You can disable this display from the
-      <a routerLink="/settings">Settings</a> menu if you like to make things
-      more difficult than they need to be.
+      <a routerLink="/settings">Settings</a> menu if you like making things more
+      difficult than they need to be.
     </li>
     <li>
       <strong>Auto-clear satisfied lines:</strong> Once you've selected every
@@ -197,7 +197,7 @@
           #-#</code
         >
       </span>
-      • This warning appears on about 3.4% of boards. It indicates that a board
+      • This warning appears on only 3.4% of boards. It indicates that a board
       cannot be solved using only <em>first-principles</em> logic (identifying
       required and unusable cells based solely on their presence in a row,
       column, or group). The <code>#-#</code> shown in the warning represents
@@ -255,7 +255,9 @@
   <ul>
     <li>Launch faster from your home screen, Dock, or Start menu.</li>
     <li>Run in a standalone window without the browser address bar.</li>
-    <li>Work offline thanks to the built-in service worker.</li>
+    <li>
+      Work in airplane mode and in internet dead zones.
+    </li>
   </ul>
   <app-install></app-install>
 
